--- a/UserBlazorApp.API/UserBlazorApp.API.csproj
+++ b/UserBlazorApp.API/UserBlazorApp.API.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -16,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\UserBlazorApp.UI\UserBlazorApp.UI.csproj" />
     <ProjectReference Include="..\UsersBlazorApp.Data\UsersBlazorApp.Data.csproj" />
   </ItemGroup>
 
